# freetype-opengl-test

./: CMakeLists.txt  Font.cpp  Font.h  GLSLShader.cpp  GLSLShader.h  Game.cpp  Game.h  Utility.cpp  Utility.h  main.cpp
shaders/: shader.frag  shader.vert
